KJHH-894: Prevent wrap inside buttons and doubling organization children on view changes.

--- a/kayttooikeus-ui-common/button/Button.css
+++ b/kayttooikeus-ui-common/button/Button.css
@@ -2,6 +2,7 @@
     padding: 10px;
     cursor: pointer;
     border: 1px solid rgb(21, 158, 203);
+    white-space: nowrap;
 }
 .action {
     background-color: rgb(21, 158, 203);
